--- a/SimplificadorFracao/ConsoleApp1/Simplificador.csproj
+++ b/SimplificadorFracao/ConsoleApp1/Simplificador.csproj
@@ -67,6 +67,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Numero.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
