--- a/SimplificadorFracao/ConsoleApp1/Simplificador.csproj
+++ b/SimplificadorFracao/ConsoleApp1/Simplificador.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{83BE8DEE-9B13-459D-97E2-6317CF8DA8D5}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>SimplificadorFracao</RootNamespace>
-    <AssemblyName>SimplificadorFracao</AssemblyName>
+    <AssemblyName>SimpliFracao</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
