--- a/SimplificadorFracao/ConsoleApp1/Simplificador.csproj
+++ b/SimplificadorFracao/ConsoleApp1/Simplificador.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Atualizador.cs" />
+    <Compile Include="FileHelper.cs" />
     <Compile Include="LerXML.cs" />
     <Compile Include="LogHelper.cs" />
     <Compile Include="Numero.cs" />
